# Cogito_mk1

./: README.md  event.json  my_event.json  samconfig.toml  template.yaml
.aws-sam/: build.toml
Cogito_root/: app.py  epubScan_lamda.py  imageScan_Lambda.py  requirements.txt
Cogito_root/Ext/boto3-1.34.67.dist-info/: RECORD
Cogito_root/Ext/botocore-1.34.67.dist-info/: RECORD
Cogito_root/Ext/distro-1.9.0.dist-info/: RECORD
Cogito_root/Ext/httpx-0.27.0.dist-info/: RECORD
Cogito_root/Ext/jmespath-1.0.1.dist-info/: RECORD
Cogito_root/Ext/openai-1.14.2.dist-info/: RECORD
Cogito_root/Ext/tqdm-4.66.2.dist-info/: RECORD
Python-3.9.0/: Makefile  Makefile.pre  config.status  pyconfig.h  pyproject.toml  python-config
Python-3.9.0/Misc/: python-config.sh  python.pc
Python-3.9.0/Modules/: ld_so_aix
Python-3.9.0/distro-1.9.0.dist-info/: RECORD
Python-3.9.0/httpx-0.27.0.dist-info/: RECORD
Python-3.9.0/openai-1.14.2.dist-info/: RECORD
Python-3.9.0/tqdm-4.66.2.dist-info/: RECORD
events/: event.json
tests/unit/: test_handler.py
